2014-11-02  Araki Ken  <arakiken@users.sf.net>

	* ml_term.c, ml_vt100_parser.c: Pty to be responsed to by OSC 5381 is
	  fixed.

	* version.h.in: 3.4.0 -> 3.4.0post

2014-10-28  Araki Ken  <arakiken@users.sf.net>

	* 3.4.0 released.
	  (tag "rel-3_4_0")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.4.0.

2014-10-28  Araki Ken  <arakiken@users.sf.net>

	* registobmp/main.c, Makefile.in: USE_WIN32API -> USE_WIN32GUI

2014-10-26  Araki Ken  <arakiken@users.sf.net>

	* etc/main, etc/main.ja, gtk/INSTALL, doc/ja/README.ja: Updated.

	* x_screen.c: change_true_transbg_alpha() is always called (except when
	  x_window_has_wall_picture() is true) even if screen->pic_mod.alpha == alpha.

	* vte.c:
	  - gdk_rgba_to_string() is replaced by gdk_rgba_to_string2() which returns
	    the format mlterm can recognize.
	  - vte_terminal_set_color_bold() and vte_terminal_set_color_bold_rgba() are
	    implemented.
	  - x_font_use_point_size_for_fc() -> x_font_use_point_size()
	    ml_term_set_winsize() is removed.

2014-10-25  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c: Cursor position passed to ibus_input_context_set_cursor_location()
	  is fixed.

2014-10-24  Araki Ken  <arakiken@users.sf.net>

	* c_sixel.c: Hue 120=Red, 240=Green, 0=Blue

	* man/mlterm.1: .TP was missing.

2014-10-19  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_imagelib.c: kik_mem_malloc() etc are enabled if KIK_DEBUG is defined.

	* kik_mem.[ch]: kik_mem_remove() is added.

	* x_screen.c, x_screen_manager.c:
	  sixel_palette argument is added to get_picture_data().

	* ml_vt100_parser.[ch]:
	  - ml_vt100_parser_t::sixel_palette is added.
	  - sixel_palette argument is added to ml_xterm_event_listener_t::get_picture_data().

	* c_sixel.c, x_picture.h, fb/x_imagelib.c:
	  - "custom_palette" static variable is introduced and x_set_custom_sixel_palette()
	    is added.
	  - "#define color_tbl sixel_cmap" is removed.
