@@ -104,8 +104,7 @@ static mkf_ucs_property_t  ucs_property_table[] =
 	{ 0x00000825 , 0x00000827 , MKF_COMBINING } ,
 	{ 0x00000829 , 0x0000082d , MKF_COMBINING } ,
 	{ 0x00000859 , 0x0000085b , MKF_COMBINING } ,
-	{ 0x000008e4 , 0x000008fe , MKF_COMBINING } ,
-	{ 0x00000900 , 0x00000903 , MKF_COMBINING } ,
+	{ 0x000008e4 , 0x00000903 , MKF_COMBINING } ,
 	{ 0x0000093a , 0x0000093c , MKF_COMBINING } ,
 	{ 0x0000093e , 0x0000094f , MKF_COMBINING } ,
 	{ 0x00000951 , 0x00000957 , MKF_COMBINING } ,
@@ -143,20 +142,20 @@ static mkf_ucs_property_t  ucs_property_table[] =
 	{ 0x00000bc6 , 0x00000bc8 , MKF_COMBINING } ,
 	{ 0x00000bca , 0x00000bcd , MKF_COMBINING } ,
 	{ 0x00000bd7 , 0x00000bd7 , MKF_COMBINING } ,
-	{ 0x00000c01 , 0x00000c03 , MKF_COMBINING } ,
+	{ 0x00000c00 , 0x00000c03 , MKF_COMBINING } ,
 	{ 0x00000c3e , 0x00000c44 , MKF_COMBINING } ,
 	{ 0x00000c46 , 0x00000c48 , MKF_COMBINING } ,
 	{ 0x00000c4a , 0x00000c4d , MKF_COMBINING } ,
 	{ 0x00000c55 , 0x00000c56 , MKF_COMBINING } ,
 	{ 0x00000c62 , 0x00000c63 , MKF_COMBINING } ,
-	{ 0x00000c82 , 0x00000c83 , MKF_COMBINING } ,
+	{ 0x00000c81 , 0x00000c83 , MKF_COMBINING } ,
 	{ 0x00000cbc , 0x00000cbc , MKF_COMBINING } ,
 	{ 0x00000cbe , 0x00000cc4 , MKF_COMBINING } ,
 	{ 0x00000cc6 , 0x00000cc8 , MKF_COMBINING } ,
 	{ 0x00000cca , 0x00000ccd , MKF_COMBINING } ,
 	{ 0x00000cd5 , 0x00000cd6 , MKF_COMBINING } ,
 	{ 0x00000ce2 , 0x00000ce3 , MKF_COMBINING } ,
-	{ 0x00000d02 , 0x00000d03 , MKF_COMBINING } ,
+	{ 0x00000d01 , 0x00000d03 , MKF_COMBINING } ,
 	{ 0x00000d3e , 0x00000d44 , MKF_COMBINING } ,
 	{ 0x00000d46 , 0x00000d48 , MKF_COMBINING } ,
 	{ 0x00000d4a , 0x00000d4d , MKF_COMBINING } ,
@@ -213,6 +212,7 @@ static mkf_ucs_property_t  ucs_property_table[] =
 	{ 0x00001a55 , 0x00001a5e , MKF_COMBINING } ,
 	{ 0x00001a60 , 0x00001a7c , MKF_COMBINING } ,
 	{ 0x00001a7f , 0x00001a7f , MKF_COMBINING } ,
+	{ 0x00001ab0 , 0x00001abe , MKF_COMBINING } ,
 	{ 0x00001b00 , 0x00001b04 , MKF_COMBINING } ,
 	{ 0x00001b34 , 0x00001b44 , MKF_COMBINING } ,
 	{ 0x00001b6b , 0x00001b73 , MKF_COMBINING } ,
@@ -224,7 +224,8 @@ static mkf_ucs_property_t  ucs_property_table[] =
 	{ 0x00001cd4 , 0x00001ce8 , MKF_COMBINING } ,
 	{ 0x00001ced , 0x00001ced , MKF_COMBINING } ,
 	{ 0x00001cf2 , 0x00001cf4 , MKF_COMBINING } ,
-	{ 0x00001dc0 , 0x00001de6 , MKF_COMBINING } ,
+	{ 0x00001cf8 , 0x00001cf9 , MKF_COMBINING } ,
+	{ 0x00001dc0 , 0x00001df5 , MKF_COMBINING } ,
 	{ 0x00001dfc , 0x00001dff , MKF_COMBINING } ,
 	{ 0x00002010 , 0x00002010 , MKF_AWIDTH } ,
 	{ 0x00002013 , 0x00002016 , MKF_AWIDTH } ,
@@ -369,10 +370,11 @@ static mkf_ucs_property_t  ucs_property_table[] =
 	{ 0x0000a960 , 0x0000a97c , MKF_FULLWIDTH } ,
 	{ 0x0000a980 , 0x0000a983 , MKF_COMBINING } ,
 	{ 0x0000a9b3 , 0x0000a9c0 , MKF_COMBINING } ,
+	{ 0x0000a9e5 , 0x0000a9e5 , MKF_COMBINING } ,
 	{ 0x0000aa29 , 0x0000aa36 , MKF_COMBINING } ,
 	{ 0x0000aa43 , 0x0000aa43 , MKF_COMBINING } ,
 	{ 0x0000aa4c , 0x0000aa4d , MKF_COMBINING } ,
-	{ 0x0000aa7b , 0x0000aa7b , MKF_COMBINING } ,
+	{ 0x0000aa7b , 0x0000aa7d , MKF_COMBINING } ,
 	{ 0x0000aab0 , 0x0000aab0 , MKF_COMBINING } ,
 	{ 0x0000aab2 , 0x0000aab4 , MKF_COMBINING } ,
 	{ 0x0000aab7 , 0x0000aab8 , MKF_COMBINING } ,
@@ -388,7 +390,7 @@ static mkf_ucs_property_t  ucs_property_table[] =
 	{ 0x0000fb1e , 0x0000fb1e , MKF_COMBINING } ,
 	{ 0x0000fe00 , 0x0000fe0f , MKF_COMBINING | MKF_AWIDTH } ,
 	{ 0x0000fe10 , 0x0000fe19 , MKF_FULLWIDTH } ,
-	{ 0x0000fe20 , 0x0000fe26 , MKF_COMBINING } ,
+	{ 0x0000fe20 , 0x0000fe2d , MKF_COMBINING } ,
 	{ 0x0000fe30 , 0x0000fe52 , MKF_FULLWIDTH } ,
 	{ 0x0000fe54 , 0x0000fe66 , MKF_FULLWIDTH } ,
 	{ 0x0000fe68 , 0x0000fe6b , MKF_FULLWIDTH } ,
@@ -396,29 +398,52 @@ static mkf_ucs_property_t  ucs_property_table[] =
 	{ 0x0000ffe0 , 0x0000ffe6 , MKF_FULLWIDTH } ,
 	{ 0x0000fffd , 0x0000fffd , MKF_AWIDTH } ,
 	{ 0x000101fd , 0x000101fd , MKF_COMBINING } ,
+	{ 0x000102e0 , 0x000102e0 , MKF_COMBINING } ,
+	{ 0x00010376 , 0x0001037a , MKF_COMBINING } ,
 	{ 0x00010a01 , 0x00010a03 , MKF_COMBINING } ,
 	{ 0x00010a05 , 0x00010a06 , MKF_COMBINING } ,
 	{ 0x00010a0c , 0x00010a0f , MKF_COMBINING } ,
 	{ 0x00010a38 , 0x00010a3a , MKF_COMBINING } ,
 	{ 0x00010a3f , 0x00010a3f , MKF_COMBINING } ,
+	{ 0x00010ae5 , 0x00010ae6 , MKF_COMBINING } ,
 	{ 0x00011000 , 0x00011002 , MKF_COMBINING } ,
 	{ 0x00011038 , 0x00011046 , MKF_COMBINING } ,
-	{ 0x00011080 , 0x00011082 , MKF_COMBINING } ,
+	{ 0x0001107f , 0x00011082 , MKF_COMBINING } ,
 	{ 0x000110b0 , 0x000110ba , MKF_COMBINING } ,
 	{ 0x00011100 , 0x00011102 , MKF_COMBINING } ,
 	{ 0x00011127 , 0x00011134 , MKF_COMBINING } ,
+	{ 0x00011173 , 0x00011173 , MKF_COMBINING } ,
 	{ 0x00011180 , 0x00011182 , MKF_COMBINING } ,
 	{ 0x000111b3 , 0x000111c0 , MKF_COMBINING } ,
+	{ 0x0001122c , 0x00011237 , MKF_COMBINING } ,
+	{ 0x000112df , 0x000112ea , MKF_COMBINING } ,
+	{ 0x00011301 , 0x00011303 , MKF_COMBINING } ,
+	{ 0x0001133c , 0x0001133c , MKF_COMBINING } ,
+	{ 0x0001133e , 0x00011344 , MKF_COMBINING } ,
+	{ 0x00011347 , 0x00011348 , MKF_COMBINING } ,
+	{ 0x0001134b , 0x0001134d , MKF_COMBINING } ,
+	{ 0x00011357 , 0x00011357 , MKF_COMBINING } ,
+	{ 0x00011362 , 0x00011363 , MKF_COMBINING } ,
+	{ 0x00011366 , 0x0001136c , MKF_COMBINING } ,
+	{ 0x00011370 , 0x00011374 , MKF_COMBINING } ,
+	{ 0x000114b0 , 0x000114c3 , MKF_COMBINING } ,
+	{ 0x000115af , 0x000115b5 , MKF_COMBINING } ,
+	{ 0x000115b8 , 0x000115c0 , MKF_COMBINING } ,
+	{ 0x00011630 , 0x00011640 , MKF_COMBINING } ,
 	{ 0x000116ab , 0x000116b7 , MKF_COMBINING } ,
+	{ 0x00016af0 , 0x00016af4 , MKF_COMBINING } ,
+	{ 0x00016b30 , 0x00016b36 , MKF_COMBINING } ,
 	{ 0x00016f51 , 0x00016f7e , MKF_COMBINING } ,
 	{ 0x00016f8f , 0x00016f92 , MKF_COMBINING } ,
 	{ 0x0001b000 , 0x0001b001 , MKF_FULLWIDTH } ,
+	{ 0x0001bc9d , 0x0001bc9e , MKF_COMBINING } ,
 	{ 0x0001d165 , 0x0001d169 , MKF_COMBINING } ,
 	{ 0x0001d16d , 0x0001d172 , MKF_COMBINING } ,
 	{ 0x0001d17b , 0x0001d182 , MKF_COMBINING } ,
 	{ 0x0001d185 , 0x0001d18b , MKF_COMBINING } ,
 	{ 0x0001d1aa , 0x0001d1ad , MKF_COMBINING } ,
 	{ 0x0001d242 , 0x0001d244 , MKF_COMBINING } ,
+	{ 0x0001e8d0 , 0x0001e8d6 , MKF_COMBINING } ,
 	{ 0x0001f100 , 0x0001f10a , MKF_AWIDTH } ,
 	{ 0x0001f110 , 0x0001f12d , MKF_AWIDTH } ,
 	{ 0x0001f130 , 0x0001f169 , MKF_AWIDTH } ,
