@@ -223,5 +223,5 @@ parse( \@all_lines) ;
 
 output ;
 
-print "Add 0x1160-0x11ff (Jamo medial vowels and final consonants) = MKF_COMBINING | MKF_FULLWIDTH manually.\n"
-print "Check awidth range and fix x_calculate_char_width() in x_font.c.\n"
+print "Add 0x1160-0x11ff (Jamo medial vowels and final consonants) = MKF_COMBINING | MKF_FULLWIDTH manually.\n" ;
+print "Check awidth range and fix x_calculate_char_width() in x_font.c.\n" ;
