@@ -13,5 +13,7 @@ GtkWidget *  mc_char_encoding_config_widget_new(void) ;
 
 void  mc_update_char_encoding(void) ;
 
+char *  mc_get_char_encoding(void) ;
+
 
 #endif
